# vpc2_autocobro

./: .gitignore  CLAUDE.md  README.md  planification.md  pyproject.toml
data/: train_v5.yaml
data/poc_10_clases/: data.yaml
data/poc_10_clases/train/: labels.cache
data/poc_10_clases/val/: labels.cache
data/poc_multiproduct/: README.dataset.txt  README.roboflow.txt  data.yaml
data/poc_multiproduct/train/: labels.cache
data/poc_multiproduct/val/: labels.cache
docs/: hardware_setup.md  presentation_structure.md
notebooks/: train.ipynb  train_multi_and_single_product.ipynb  train_single_product.ipynb
paper/: PAPER_RULES.md  paper.bib  paper.tex
presentation/: presentation.tex
runs/evaluate/eval_test_yolo11n/: metrics.json  predictions.json
runs/evaluate/eval_yolo11n_poc10/: metrics.json  predictions.json
runs/evaluate/eval_yolov10n_poc10/: metrics.json  predictions.json
runs/evaluate/eval_yolov8n_poc10/: metrics.json  predictions.json
src/: __init__.py  compare_augmentation.py  convert_heic.py  demo.py  evaluate.py  extract_frames.py  inference.py  train.py  utils.py
